--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -685,21 +685,8 @@
             <p><strong>Do not </strong>reduce the amount reported in box 14 by the cost or value of saws, trimmers, parts, gasoline, or any other materials the employee supplies.</p>
             </div>
             </details>
-            <details>
-            <summary>Employees outside Canada</summary>
-            <div id="ajax-outside1">
-            <p>In situations where you pay CPP on behalf of your employee who is working outside Canada, for all or part of the year, you have to prepare a T4 slip.</p>
-            <p>See box 10 and box 29 for specific instructions.</p>
-            <h4 id="h_0_1">Detached employees</h4>
-            <p>When CPP is paid by the employer on behalf of <strong>detached employees </strong>under employment code 16, leave box 14 blank if no other type of income is reported. Fill in boxes 16 and 26 with the appropriate amounts and leave boxes 18 and 24 blank.</p>
-            </div>
-            </details>
-            <details>
-            <summary>Employee salary overpayments</summary>
-            <div id="ajax-overpaid1">
-            <p id="overpaid">Learn more: <a href="/cra-arc/payroll/file/correct.html#h-2">Correct deduction errors on salary overpayments</a></p>
-            </div>
-            </details>
+         
+          
 </details>
 <details>  <summary >What are the guidelines for filling out slips</summary> 
 
@@ -950,6 +937,13 @@
             </tr>
             </tbody>
             </table>
+
+ <h4>Specific situations</h4>
+<dl class="dl-horizontal">
+
+<dt>Province of employment outside Canada</dt>
+<dd></dd>
+</dl>
             </details>
 		    </li>
 		<li class="code-num">
@@ -965,9 +959,18 @@
             <li>16 - Detached employee &ndash; Social security agreement</li>
             <li>17 - Self-employed fishing income</li>
             </ul>
+ <h4>Specific situations</h4>
+<dl class="dl-horizontal">
+
+<dt>Province of employment outside Canada - Detached employee</dt>
+<dd></dd>
+</dl>
+
             </details>
 		 </li>
-		<li class="code-num">
+	
+
+	<li class="code-num">
             <details>
             <summary id="bx_14">Box 14&nbsp;– Employment income</summary>
             <p>Report your employee's total income before deductions, including:</p>
@@ -1032,8 +1035,8 @@
 <dt>Employees with power saws or tree trimmers  </dt>
 <dd>Add situation</dd>
 
-<dt>Employees outside Canada</dt>
-<dd>Add situation</dd>
+<dt>Province of employment outside Canada - Detached employee</dt>
+<dd><strong>Do not </strong>report any amount using box 14 if you use employment code 16 in <a href="#bx_29">box 29</a> and no other type of income is reported on the T4 slip.</dd>
 
 <dt>Employee salary overpayments</dt>
 <dd>Add situation</dd>
@@ -1081,8 +1084,9 @@
 <dt>Add title</dt>
 <dd>Add situation</dd>
 
-<dt>Add title</dt>
-<dd>Add situation</dd>
+<dt>Province of employment outside Canada - Detached employee</dt>
+<dd>Report the amount you deducted for your employee's share of the CPP contributions using box 16 if box 10 shows their province or territory of employment is other than Quebec</dd>
+
 </dl>    
    <p>Learn more: <a href="/cra-arc/payroll/file/corrections.html">Make corrections after filing</a></p> 
             </details>
@@ -1160,8 +1164,8 @@
 <dt>Self-employed barbers and hairdressers, taxi drivers and drivers of other passenger-carrying vehicles</dt>
 <dd>Add situation</dd>
 
-<dt>Add title</dt>
-<dd>Add situation</dd>
+<dt>Province of employment outside Canada - Detached employee</dt>
+<dd><strong>Do not </strong>report any amount using box 24 if you use employment code 16 in <a href="#bx_29">box 29</a> and no other type of income is reported on the T4 slip.</dd>
 </dl>   
             </details>
 </li>
@@ -1227,8 +1231,8 @@
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd></dd>
 
-<dt>Add title</dt>
-<dd>Add situation</dd>
+<dt>Province of employment outside Canada - Detached employee</dt>
+<dd>Report the amount you deducted for XXX using box 26</dd>
 
 <dt>Add title</dt>
 <dd>Add situation</dd>
@@ -1288,9 +1292,8 @@
     <li>PPIP premiums: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/calculating-source-deductions-and-employer-contributions/quebec-parental-insurance-plan-qpip-premiums/">Québec Parental Insurance Plan (QPIP) Premiums | Revenu Québec</a></li>
 </ul> </dd>
 
-<dt>Province of employment outside Canada</dt>
-<dd><p><strong>Do not </strong>report any amount using box 18 if the province of employment is outside Canada.</p></dd>
-
+<dt>Province of employment outside Canada - Detached employee</dt>
+<dd><strong>Do not </strong>report any amount using box 18 if you use employment code 16 in <a href="#bx_29">box 29</a> and no other type of income is reported on the T4 slip.</dd>
 </dl>   
 
 <p>Learn more on how to determine if you need to deduct EI premiums from benefits and special payments: <a href="/cra-arc/payroll/calculate/index.html">Calculate payroll deductions and contributions</a></p>         
