--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -385,9 +385,18 @@
 				<li class="code-num">  	
  <details><summary>Box 012 – Social insurance number (SIN)</summary>
      <p id="bx012">Enter the SIN provided by the recipient.</p>
-        <p>If you do not have the recipient's SIN, enter 9 zeros. You still have to file their T4A slip without the SIN. </p>
-	<p>If the recipient had a SIN beginning with a 9 and later in the year received a permanent SIN, use the permanent SIN.</p>
+        
+	
  <p> <strong>Do not </strong>prepare 2 T4A slips. </p>
+ <h4>Specific situations</h4>
+<dl class="dl-horizontal">
+<dt>No SIN</dt>
+<dd>Enter 9 zeros if you do not have the recipient's SIN. You still have to file their T4A slip without the SIN. </dd>
+<dt>SIN beginning with a 9 and received a permanent SIN</dt>
+<dd>Enter the permanent SIN if the recipient had a SIN beginning with a 9 and later in the year received a permanent SIN.</dd>
+<dt>Partnership or corporation</dt>
+<dd><strong>Do not</strong> enter a SIN using box 012, use <a href="#bx013">box 013</a>.</dd>
+</dl>
 	<p>Learn more: <a href="/cra-arc/payroll/employee/sin.html">Get the social insurance number (SIN)</a></p>
         </details>
        </li>
