--- a/fhsa/v3/out.html
+++ b/fhsa/v3/out.html
@@ -373,7 +373,7 @@
 
     
         <h3>Closing your FHSAs after making a qualifying withdrawal</h3>
-<p>You should close <strong>all</strong> of your FHSAs on or before <span class="nowrap">December 31</span> of the year following the year of your first qualifying withdrawal. This is because your <a href="#maxpart" aria-controls="maxpart" class="wb-lbx" role="button">maximum participation period&nbsp;<span class="far fa-question-circle"></span></a> ends at the end of the year following the year of your first qualifying withdrawal. For more information, go to&nbsp;<a href="/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/opening-closing-and-fhsa.html#h_3">When to close an FHSA</a>.</p>
+<p>You should close <strong>all</strong> of your FHSAs on or before <span class="nowrap">December 31</span> of the year following the year of your first qualifying withdrawal. This is because your <a href="#maxpart" aria-controls="maxpart" class="wb-lbx" role="button">maximum participation period&nbsp;<span class="far fa-question-circle"></span></a> ends at the end of the year following the year of your first qualifying withdrawal. For more information, go to&nbsp;<a href="close.html">When to close an FHSA</a>.</p>
 
     
 
@@ -434,7 +434,7 @@
 
 
 <div class="alert alert-info">
-	<p>If you have an excess FHSA amount, one of the ways that you can reduce or eliminate your excess FHSA amount is to make a taxable withdrawal. For more information, go to <a href="/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/what-happens-contribute-transfer-too-much.html">What happens if you contribute or transfer too much to your FHSAs</a>.</p>
+	<p>If you have an excess FHSA amount, one of the ways that you can reduce or eliminate your excess FHSA amount is to make a taxable withdrawal. For more information, go to <a href="toomuch.html">What happens if you contribute or transfer too much to your FHSAs</a>.</p>
 </div>
 
 	
@@ -474,7 +474,7 @@
 
         <h2 id="h-3">Making designated withdrawals or transfers from your FHSAs</h2>
 <p>If you contribute or transfer to your FHSAs more than your FHSA participation room for the year, you will have an <a href="#excessfhsa" aria-controls="excessfhsa" class="wb-lbx" role="button">excess FHSA&nbsp;amount&nbsp;<span class="far fa-question-circle"></span></a>. Generally, you have to pay a tax equal to 1% of the highest excess FHSA amount in the month until the excess FHSA amount is eliminated.&nbsp;</p>
-<p>If you have an excess FHSA amount, one of the ways that you can reduce or eliminate your excess FHSA amount is to make a designated withdrawal. The amount of the designated withdrawal is not required to be included as income on your income tax and benefit return in the year. For more information, go to&nbsp;<a href="/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/what-happens-contribute-transfer-too-much.html">What happens if you contribute or transfer too much to your FHSAs</a>.</p>
+<p>If you have an excess FHSA amount, one of the ways that you can reduce or eliminate your excess FHSA amount is to make a designated withdrawal. The amount of the designated withdrawal is not required to be included as income on your income tax and benefit return in the year. For more information, go to&nbsp;<a href="toomuch.html">What happens if you contribute or transfer too much to your FHSAs</a>.</p>
 
      <h2 id="h-5">Transfers from your FHSAs to your RRSPs or RRIFs</h2>
 	<p>You will be allowed to transfer property from your FHSAs to your RRSPs or RRIFs without any immediate tax consequences, as long as it is a <strong>direct transfer</strong> and you do not have an excess FHSA amount.</p>
