--- a/subway/uht/index.html
+++ b/subway/uht/index.html
@@ -967,20 +967,20 @@ input[type='radio'] {
                     <nav aria-label="Section menu">
                         <h2>Sections</h2>
                         <ul class="gc-navseq">
-                            <li><a href="whomust.html">Who must file a return and pay the tax</a><br>
+                            <li><a href="who-file.html">Who must file a return and pay the tax</a><br>
                                 [Details]
                             </li>
-				<li><a href="duedate.html">When to send the return and pay the tax</a><br>
+				<li><a href="when-file.html">When to file the return and pay the tax</a><br>
                                 [Details]
                             </li>
                             <li><a href="complete-return.html">Complete the return</a><br>
                                 [Details]
                             </li>
 				
-                            <li><a href="sendreturn.html">Send the return</a><br>
+                            <li><a href="file-return.html">File the return</a><br>
                                 [Details]
                             </li>
-                            <li><a href="paytax.html">Pay the tax</a><br>
+                            <li><a href="pay-tax.html">Pay the tax</a><br>
                                 [Details]
                             </li>
                             <li><a href="contact.html">Contact us</a><br>
