--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -780,11 +780,11 @@ margin-left: 38px;
             <nav aria-label="Section menu">
                <h2 id="gc-navseq-header" class="mrgn-tp-0 hidden-xs hidden-sm">Sections</h2>
               <ul class="gc-navseq">
-                <li><a href="whomust.html">Who must file a return and pay the tax</span></a></li>
-		      <li><a href="duedate.html">When to send the return and pay the tax</span></a></li>
+                <li><a href="who-file.html">Who must file a return and pay the tax</span></a></li>
+		      <li><a href="when-file.html">When to file the return and pay the tax</span></a></li>
 		      <li class="active"><a aria-current="page"><a href="complete-return.html">Complete the return</span></a></li>
-                <li><a href="sendreturn.html">Send the return</span></a></li>
-                <li><a href="paytax.html">Pay the tax</span></a></li>
+                <li><a href="file-return.html">File the return</span></a></li>
+                <li><a href="pay-tax.html">Pay the tax</span></a></li>
                 <li><a href="contact.html">Contact us</span></a></li>
 			</ul>
             <!-- ajax replace to make active menu item -->
