--- a/subway/uht/file-return.html
+++ b/subway/uht/file-return.html
@@ -9,7 +9,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Send the return - Underused Housing Tax - Canada.ca</title>
+         <title>File the return - Underused Housing Tax - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name=”robots” content=”noindex, follow”>
          <!-- Meta data -->
@@ -780,12 +780,12 @@ margin-left: 38px;
             <nav aria-label="Section menu">
                <h2 id="gc-navseq-header" class="mrgn-tp-0 hidden-xs hidden-sm">Sections</h2>
 			   <ul class="gc-navseq">
-                <li><a href="whomust.html">Who must file a return and pay the tax</span></a></li>
-				   <li><a href="duedate.html">When to send the return and pay the tax</span></a></li>
+                <li><a href="who-file.html">Who must file a return and pay the tax</span></a></li>
+				   <li><a href="when-file.html">When to file the return and pay the tax</span></a></li>
                
 	<li><a href="complete-return.html">Complete the return</span></a></li>
-                <li class="active"><a aria-current="page"><a href="filereturn.html">Send the return</span></a></li>
-                <li><a href="paytax.html">Pay the tax</span></a></li>
+                <li class="active"><a aria-current="page"><a href="file-return.html">File the return</span></a></li>
+                <li><a href="pay-tax.html">Pay the tax</span></a></li>
                 <li><a href="contact.html">Contact us</span></a></li>
 			</ul>
             <!-- ajax replace to make active menu item -->
