--- a/subway/uht/file-return.html
+++ b/subway/uht/file-return.html
@@ -793,7 +793,7 @@ margin-left: 38px;
             </nav>
          </section>
          <section class="gc-nav-section experimental provisional">
-            <h1 property="name" id="wb-cont">Send the return</h1>
+            <h1 property="name" id="wb-cont">File the return</h1>
 			
      <p>You can file your return in <a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-individuals/account-individuals.html?utm_source=Canada_dot_ca&utm_medium=News_Item">My Account</a> or <a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-businesses/business-account.html?utm_source=Canada_dot_ca&utm_medium=News_Item">My Business Account</a></p>
 		 <p>If you are not registered for CRA's online portals, you may either use electronic filing, or you may send your return by mail.</p>
