--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -415,19 +415,19 @@
 </dd>
 
 <dt>Disability benefits</dt>
-<dd><p>Report <strong>disability benefits paid as a life annuity</strong> out of a superannuation or <abbr title="Registered pension plan">RPP</abbr> using box 016.</p>
-<p><strong>Do not</strong> report any <strong>other disability benefits</strong> paid out of superannuation or pension plan using box 016, use <a href="#cd125">code 125</a>.</p></dd>
+<dd><p>Report <strong>disability benefits paid as a life annuity</strong> out of a superannuation or <abbr title="Registered pension plan">RPP</abbr> fund using box 016.</p>
+<p><strong>Do not</strong> report any <strong>other disability benefits</strong> paid out of a superannuation or pension plan using box 016, use <a href="#cd125">code 125</a>.</p></dd>
 
 <dt>Veterans' benefits eligible for pension splitting</dt>
 <dd><p>Report the veterans' benefits eligible for pension splitting you paid to eligible veterans using box 016 <strong>and</strong> <a href="#cd128">code 128</a>.</p>
 <p><strong>Do not</strong> report any <strong>other veterans' benefits</strong> you paid using box 016, use <a href="#cd127">code 127</a>.</p></dd>
 
 <dt>Unregistered pension plan</dt>
-<dd><p>Report superannuation or pension benefits you paid to a Canadian resident under an <strong>unregistered pension plan </strong>for services that the person rendered in a period throughout which the person <strong>did not reside in Canada</strong> using box 016. These payments <strong>cannot</strong> be transferred to a registered pension plan (RPP) or registered retirement savings plan (RRSP).</p>
+<dd><p>Report superannuation or pension benefits you make periodic payments to a Canadian resident under an <strong>unregistered pension plan </strong>for services that the person rendered in a period throughout which the person <strong>did not reside in Canada</strong> using box 016. </p>
 
 <p><strong>Do not</strong> report:</p>
  <ul>
- <li><strong>Periodic payments</strong> from an unregistered pension plan using box 016, use <a href="#cd109">code 109</a>
+ <li>Other <strong>periodic payments</strong> from an unregistered pension plan using box 016, use <a href="#cd109">code 109</a>
  </li>
   <li><strong>Lump-sum payments</strong> from an unregistered pension plan using box 016, use <a href="#bx018">box 018</a> and <a href="#cd190">code 190</a>
  </li>
@@ -446,7 +446,7 @@
 
 
 </dl>
-<p>Learn more on the tax treatment of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>         
+<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>         
 
                 </details>
  </li>
@@ -454,7 +454,7 @@
    <details><summary>Box 022 – Income tax deducted </summary>
   <p id="bx022">Report the amount of income tax you deducted from the recipient during the year. This includes the federal, provincial (except Quebec), and territorial taxes that apply. </p>
      <p><strong>Do not </strong>report any amount in box 022 if you did not deduct tax.</p>
-        <p><strong>Do not </strong>include any amount you withheld under the authority of a garnishee or a requirement to pay that applies to the recipients's previously assessed tax arrears.</p>
+        <p><strong>Do not </strong>include any amount you withheld under the authority of a garnishee or a requirement to pay that applies to the recipient’s previously assessed tax arrears.</p>
 
                     </details>
            </li>
@@ -464,20 +464,24 @@
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>Single payments</dt>
-<dd> <p id="bx018">Report the taxable portion of a <strong>single payment</strong> out of a pension fund or plan including any single payment resulting from a:</p>
+<dd> <p id="bx018">Report the taxable portion of a single payment out of a <strong>pension fund or plan</strong>strong> using box 018, including any single payment resulting from a:</p>
 <ul>
  <li>Withdrawal from the plan, retirement from employment, or death of an employee or former employee</li>
 <li>Termination of, amendment to, or modification of the plan</li>
 <li>Reimbursement of any over-contributions to the plan</li>
 </ul>
-<p class="mrgn-tp-md">Report the taxable portion of any single payment out of a deferred profit sharing plan (<abbr title="Deferred profit sharing plan">DPSP</abbr>) using box 018.</p>
+<p class="mrgn-tp-md">Report the taxable portion of any single payment out of a <strong>deferred profit sharing plan (<abbr title="Deferred profit sharing plan">DPSP</abbr>)</strong>strong> using box 018, including single payment resulting from a:.</p>
+<ul>
+ <li>Withdrawal from the plan, retirement from employment, or death of an employee or former employee</li>
+<li>Reimbursement of any over-contributions to the plan</li>
+</ul>
 
-<p>Report the taxable portion of a lump-sum death benefit paid out of an advanced life deferred annuity (<abbr title="Advanced life deferred annuity">ALDA</abbr>) using box 018.</p>
+<p>Report the taxable portion of a <strong>lump-sum death benefit paid out of an advanced life deferred annuity (<abbr title="Advanced life deferred annuity">ALDA</abbr>)</strong>strong> using box 018.</p>
 
 </dd>
 
 <dt>Non-resident services</dt>
-<dd><p>Report amount paid for superannuation or pension benefits to a Canadian resident under an unregistered pension plan for services that the person rendered in a period throughout which the person did not reside in Canada using box 018.</p>
+<dd><p>Report amount paid for superannuation or pension benefits as a lump-sum to a Canadian resident under an unregistered pension plan for services that the person rendered in a period throughout which the person did not reside in Canada using box 018.</p>
 
 <p>Report lump-sum payments you made for non-resident services transferred to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Simplified pension plan">SPP</abbr>, <abbr title="Pooled registered pension plan">PRPP</abbr> or <abbr title="Registered retirement savings plan">RRSP</abbr> and which were eligible to be deducted under paragraph 60(j) using box 018 <strong>and</strong> <a href="#cd102">code 102</a>.</p>
 
@@ -485,7 +489,7 @@
 </dd>
 
 <dt>Lump-sum payments out of <abbr title="Registered pension plan">RPP</abbr> and <abbr title="Deferred profit sharing plan">DPSP</abbr> accrued to December 31, 1971</dt>
-<dd>Report lump-sum payments you made out of a registered pension plan <abbr title="registered pension plan">RPP</abbr> and deferred profit sharing plan <abbr title="Deferred profit sharing plan">DPSP</abbr> accrued to December 31, 1971 using box 018 <strong>and</strong> <a href="#cd110">code 110</a>. </dd>
+<dd>Report lump-sum payments you made out of a registered pension plan (<abbr title="registered pension plan">RPP</abbr>) and deferred profit sharing plan (<abbr title="Deferred profit sharing plan">DPSP</abbr>) accrued to December 31, 1971 using box 018 <strong>and</strong> <a href="#cd110">code 110</a>. </dd>
 
 <dt>Direct transfers</dt>
 <dd><p><strong>Do not</strong> report direct transfers of a <abbr title="Registered pension plan">RPP</abbr> or <abbr title="Deferred profit sharing plan">DPSP</abbr> lump-sum payments to a <abbr title="Registered retirement savings plan">RRSP</abbr>, <abbr title="Simplified pension plan">SPP</abbr>, <abbr title="Pooled registered pension plan">PRPP</abbr>, <abbr title="Registered retirement income fund">RRIF</abbr>, or other <abbr title="Registered pension plan">RPP</abbr>/<abbr title="Deferred profit sharing plan">DPSP</abbr> that are transferred according to subsections&nbsp;147.3(1) to (8) or subsection 147(19) using box 018, use <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2151.html">Form T2151 Direct Transfer of a Single Amount Under Subsection 147(19) or Section 147.3</a>.</p>
@@ -507,7 +511,7 @@
 <li>Employer contributions made to the plan after December 1, 1982</li>
 <li>Amounts forfeited in the plan if these amounts are withdrawn from the plan during the year</li>
 </ul>
-<p class="mrgn-tp-md"><strong>Do not</strong> report the amount of the payments if you allocated an amount in a <strong>previous year</strong> and you made the payment in the current year using box 018, use <a href="#cd180">code 180</a>. </p>
+<p class="mrgn-tp-md">Report the amount of the payments if you allocated an amount in a <strong>previous year</strong> and you made the payment in the current year using box 018 <strong>and</strong> <a href="#cd180">code 180</a>. </p>
 </dd>
 
 <dt>Unregistered plan</dt>
@@ -1046,7 +1050,7 @@
 <li class="code-num">
  <details>  <summary>Code 180 – Lump-sum payments from a deferred profit-sharing plan (DPSP) that you cannot transfer <span class="label label-warning">Jeremiah</span></summary> 
  <p id="cd180">Report lump-sum payments you made that you <strong>cannot transfer</strong> from a <abbr title="Deferred profit sharing plan">DPSP</abbr> using code 180 <strong>and</strong> <a href="#bx018">box 018</a>.</p>
-<p>You also have to report the amount of the payments if you allocated an amount in a <strong>previous year</strong> and you made the payment in the current year.</p>
+<p>You also have to report the amount of the payments if you allocated an amount in a <strong>previous year</strong> and you made the payment in the current year using code 180 <strong>and</strong> <a href="#bx018">box 018</a>.</p>
 
 <h4>Specific situation </h4>
 <dl class="dl-horizontal">
@@ -1062,7 +1066,7 @@
 </dd>
 
 </dl>
-<p>Learn more on the tax treatment of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/deferral.html">Payments related to salary deferral arrangements</a></p>
+<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/deferral.html">Payments related to salary deferral arrangements</a></p>
 </details> 
 </li>
 
