--- a/subway/uht/file-return.html
+++ b/subway/uht/file-return.html
@@ -795,12 +795,12 @@ margin-left: 38px;
          <section class="gc-nav-section experimental provisional">
             <h1 property="name" id="wb-cont">File the return</h1>
 			
-     <p>You can file your return in <a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-individuals/account-individuals.html?utm_source=Canada_dot_ca&utm_medium=News_Item">My Account</a> or <a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-businesses/business-account.html?utm_source=Canada_dot_ca&utm_medium=News_Item">My Business Account</a></p>
+     <p>You can file your return in <a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-individuals/account-individuals.html?utm_source=Canada_dot_ca&utm_medium=News_Item">My Account</a> or <a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-businesses/business-account.html?utm_source=Canada_dot_ca&utm_medium=News_Item">My Business Account</a>.</p>
 		 <p>If you are not registered for CRA's online portals, you may either use electronic filing, or you may send your return by mail.</p>
       <dl class="dl-horizontal">
         <dt>Electronically</dt>
         <dd><p><a href="https://apps.cra-arc.gc.ca/ebci/sres/ext/pub/ntrUhtFlng?request_locale=en_CA">File your Underused Housing Tax return electronically</a></p> 
-			<p>When you file, you will be presented with a list of requirements to complete your submission. One of the requirements is to <a href="https://apps.cra-arc.gc.ca/ebci/sres/ext/pub/ntrDc.action?utm_source=Canada_dot_ca&utm_medium=News_Item">get a Digital Access Code (DAC)</a>.</p>
+			<p>When you file your return, you will be presented with a list of requirements to complete your submission. One of the requirements is to <a href="https://apps.cra-arc.gc.ca/ebci/sres/ext/pub/ntrDc.action?utm_source=Canada_dot_ca&utm_medium=News_Item">get a Digital Access Code (DAC)</a>.</p>
 		<p>If you need assistance, you can call the UHT filing helpdesk toll free at 1-800-387-0720, or call collect at 613-221-3224.</p>
 	</dd>
         <dt>By mail</dt>
