--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -523,7 +523,7 @@
 
 </dl>
 
-<p>Learn more on the tax treatment of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/lumpsum.html">Lump-sum payments</a></p>     
+<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/lumpsum.html">Lump-sum payments</a></p>     
 
   </details>
           </li>
