--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -570,7 +570,7 @@
 <dd><strong>Do not</strong> report annuity payments to a non-resident using the T4a slip, use the <a href="https://www.canada.ca/content/dam/cra-arc/formspubs/pbg/nr4/nr4-21e.pdf">NR4 slip</a>.</dd>
 </dl>
  
-<p>Learn more on the tax treatment of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/annuity.html">Annuity payments </a> </p>
+<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/annuity.html">Annuity payments </a> </p>
 
                 </details>
             </li>
@@ -579,21 +579,21 @@
         <p id="bx048">Report any fees or other amounts paid for services. </p>
     <p> Do <strong>not </strong>include GST/HST or PST in the amount reported in box 048.</p> 
 
-        <p>The CRA is currently <strong>not</strong> applying penalties for failure to report fees for services.</p>
- <p>Learn more on the tax treatment of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/fees-other.html">Payments of fees for services</a></p>
+        <p>The CRA is <strong>not</strong> assessing penalties for failure relating to the completion of box 18.</p>
+ <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/fees-other.html">Payments of fees for services</a></p>
                 </details>
         </li>
 <li class="code-num">  	     <details> <summary>Recipient's name and address </summary>
         
- 	 <p id="recipient">Enter all in capital letters the recipients's last name followed by the recipients's first name and initials.</p>
+ 	 <p id="recipient">Enter all in capital letters the recipient’s last name followed by the recipient’s first name and initials.</p>
             <p>If the recipient has more than one initial, enter the recipient’s first name followed by the initials in the ‘First name’ space.</p>
             <p> <strong>Do not enter </strong>titles, such as Director, Mr., or Mrs. </p>
-            <p>Enter the recipients's home address, including the province or territory, the postal code and the country.</p>
+            <p>Enter the recipient’s home address, including the province or territory, the postal code and the country.</p>
 
 
                 </details>
  </li>
-
+<h5>Other information</h5>
       <li class="code-num">
 <details><summary>Code 014&nbsp;– Recipient's number</summary> 
   <p id="cd014">If you wish, you can enter a retiree number, an employee number, or a payroll number. In the "Other information" area, enter code&nbsp;<strong>014</strong> and the recipient's number. If you prefer, you can enter the recipient's number in the "Recipient's name" area of the T4A&nbsp;slip. The recipient address area cannot be used for this purpose.</p> 
