--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -335,7 +335,7 @@
                   &quot;print&quot;: &quot;on&quot;, &quot;type&quot;: &quot;off&quot;}" type="button">Collapse all</button>
             </div>
 
-
+<h5>Identification and pre-numbered boxes</h5>
       <li class="code-num">             
           <details><summary>Year</summary>
         <p id="year">Enter the 4 digits of the calendar year in which you made the payment to the recipient.</p>
