--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -595,12 +595,12 @@
  </li>
 <h5>Other information</h5>
       <li class="code-num">
-<details><summary>Code 014&nbsp;– Recipient's number</summary> 
+<details><summary>Code 014&nbsp;– Recipient's number <span class="label label-warning">Need to rewrite, what is needed here</span></summary> 
   <p id="cd014">If you wish, you can enter a retiree number, an employee number, or a payroll number. In the "Other information" area, enter code&nbsp;<strong>014</strong> and the recipient's number. If you prefer, you can enter the recipient's number in the "Recipient's name" area of the T4A&nbsp;slip. The recipient address area cannot be used for this purpose.</p> 
  </details> 
 </li>
 <li class="code-num">
- <details> <summary>Code 028 –&nbsp;Other income <span class="label label-warning">Jeremiah</span>  </summary> 
+ <details> <summary>Code 028 –&nbsp;Other income </summary> 
   <p id="cd028">Generally, amounts are reported in specific boxes or codes on slips. However, report any other amount that you did not have to report in other boxes or codes of the T4A slip if either:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
  <li class="cnjnctn-col">The amount is more than&nbsp;$500</li>
@@ -612,27 +612,27 @@
 <dd><strong>Do not</strong> report payments of fees for services using code 028, use <a href="#bx048">box 048</a>.</dd>
 
 <dt>Insurance plans</dt>
-<dd><p>Report amounts if you paid a premium or you made a contribution to a non-group plan (such as: sickness, accident, disability or income maintenance insurance plan) using code 028.</p>
-<p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#disability">Insurance plans</a></p></dd>
+<dd><p>Report amounts if you paid a premium or you made a contribution to a non-group plan (such as: sickness, accident, disability or income maintenance insurance plan) to a retired employee using code 028.</p>
+<p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#disability">Insurance plans</a></p></dd>
 
-<dt>Child care expenses</dt>
-<dd><p>Report amounts if you paid daycare subsidies using code 028.</p>
+<dt>Daycare subsidies</dt>
+<dd><p>Report amounts if you paid daycare subsidies to a daycare centre using code 028.</p>
 <p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/child-expenses.html">Child care expenses</a></p></dd>
 
 <dt>Travel benefit, including medical travel assistance</dt>
-<dd><p>Report the total amount of the travel benefit using code 028. </p>
-<p>If you paid for medical travel assistance in a prescribed zone, report the total amount of the travel benefit using code 028 <strong>and</strong> <a href="#cd116">code 116</a> for the medical portion only</p>
-<p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p></dd>
+<dd><p>Report the total amount of the travel benefit paid to the employees of another employer if you are a third party using code 028. </p>
+<p>If you paid for medical travel assistance in a prescribed zone, report the total amount of the travel benefit using code 028 <strong>and</strong> <a href="#cd116">code 116</a> for the medical portion only.</p>
+<p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p></dd>
 
 <dt>Board and lodging </dt>
-<dd><p>Report the total amount of the board and lodging using code 028. </p>
-<p>If you paid lodging and housing at special work sites, report the total amount of the board and lodging benefit using code 028 <strong>and</strong> <a href="#cd124">code 124</a> for the tax-exempt board, lodging and housing at the special work sites </p>
+<dd><p>Report the total amount of the board and lodging paid to the employees of another employer if you are a third party using code 028. </p>
+<p>If you paid lodging and housing at special work sites, report the total amount of the board and lodging benefit using code 028 <strong>and</strong> <a href="#cd124">code 124</a> for the tax-exempt board, lodging and housing at the special work sites. </p>
 </dd>
 
 <dt>Gifts and awards provided by a person other than the employer </dt>
 <dd><p>Report the taxable amount if you provided gifts and awards and you are a person other than the employer using code 028 <strong>and</strong> if income tax was deduced <a href="#bx022">box 022</a>. </p>
 <p><strong>Do not</strong> report if you are the manufacturer and you made the payment to the dealer's employee using code 028, use <a href="#cd154">code 154</a>.<p>
-<p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/gifts.html#manu2">Gifts, awards, and long-service awards</a></p>
+<p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/gifts.html#manu2">Gifts, awards, and long-service awards</a></p>
 </dd>
 
 </dl>
@@ -640,14 +640,14 @@
 </details> 
 </li>
 <li class="code-num">
- <details> <summary>Code 030 – Patronage allocations <span class="label label-success">Rewrite done</span></summary> 
+ <details> <summary>Code 030 – Patronage allocations </summary> 
   <p id="cd030">Report patronage payments you made to customers for their patronage, including payments made in cash or in kind, by certificate of indebtedness, issue of shares, set-off, assignment or in any other way using code 030. </p>
-<p>Learn more on the tax treatment of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/patronage.html">Patronage payments</a></p>	 
+<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/patronage.html">Patronage payments</a></p>	 
  
 </details> 
 </li>
 <li class="code-num">
- <details> <summary>Code 032 –&nbsp;Registered pension plan contributions (past service) <span class="label label-success">Rewrite done</span></summary> 
+ <details> <summary>Code 032 –&nbsp;Registered pension plan contributions (past service) </summary> 
   <p id="cd032">Report the contributions a former employee made to buy past service using code 032.</p> 
  <h4>Specific situations </h4>
 <p> The plan administrator usually fills out the T4A slip when an employer-employee relationship no longer exists. You must include any instalment interest paid for past service contributions. Instalment interest is the portion of contributions that represents the amount charged to buy past service over time. </p> 
@@ -660,7 +660,7 @@
 <dd>Report the amount using code 032 <strong>and</strong> <a href="#cd162">code 162</a></dd>
 </dl>
 
-<p>Learn more about the tax treatment of contributions to a pension plan: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>
+<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>
   
  </details> 
 </li>
