--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -749,7 +749,7 @@
             <button class="btn btn-default btn-sm wb-toggle" data-toggle="{&quot;selector&quot;: &quot;details&quot;, &quot;parent&quot;: &quot;#details-elements&quot;, 
                &quot;print&quot;: &quot;on&quot;, &quot;type&quot;: &quot;off&quot;}" type="button">Collapse all</button>
             </div>
-   
+   <h4>Identification and pre-numbered boxes</h4>
    <li class="code-num">
 	<details>
             <summary id="yr">Year</summary>
@@ -1496,7 +1496,7 @@
             <p>Enter the employee's home address, including the province or territory, the postal code and the country.</p>
             </details>
 </li>
-		
+<h4>Other information</h4>		
       <li class="code-num">
             <details>
             <summary id="cd_30">Code 30 – Board and lodging</summary> 
