--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -824,9 +824,8 @@ margin-left: 38px;
         <li>A Canadian business number (BN) with an Underused Housing Tax (RU) program account identifier code</li>
       </ul>
 
- 
-          <p>
-    <span class="fas fa-ban mrgn-rght-sm text-danger fa-lg"></span><strong>Note:</strong> A trust account number (TAN) cannot be used to file Underused Housing Tax returns.</p>
+
+          <p class='mrgn-tp-md"><span class="fas fa-ban mrgn-rght-sm text-danger fa-lg"></span><strong>Note:</strong> A trust account number (TAN) cannot be used to file Underused Housing Tax returns.</p>
    
 
 
