--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -680,7 +680,7 @@
  </li>
 
 <li class="code-num">
- <details>  <summary>Code 036 – Plan registration number <span class="label label-success">Rewrite done</span></summary> 
+ <details>  <summary>Code 036 – Plan registration number </summary> 
 <p id="cd036">Enter the 7-digit registration number that the CRA gave you for your <abbr title="registered pension plan">RPP</abbr> or <abbr title="deferred profit-sharing plan">DPSP</abbr> using code 036 if you reported an amount for a pension adjustment (<abbr title="pension adjustment">PA</abbr>) using code <a href="#cd034">code 34</a>.</p> 
 
 <p>You have to report the plan number even if your plan requires only employer contributions.</p>
@@ -690,8 +690,8 @@
  </details>
 </li>
 <li class="code-num"> 
- <details >  <summary>Code 037 – Advanced life deferred annuity purchase <span class="label label-warning">Jeremiah</span></summary> 
-  <p id="cd037">Report the total annuity amount amounts <strong>transferred from a money purchase </strong> <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Pool registered pension plan">PRPP</abbr> or <abbr title="Deferred profit sharing plan">DPSP</abbr> using code 037.</p> 
+ <details >  <summary>Code 037 – Advanced life deferred annuity purchase </summary> 
+  <p id="cd037">Report the total annuity amounts <strong>transferred from a money purchase </strong> <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Pool registered pension plan">PRPP</abbr> or <abbr title="Deferred profit sharing plan">DPSP</abbr> using code 037.</p> 
 <p>If an amount exceeding the individual’s lifetime limit has been purchased, the excess amount that is transferred back to a qualified registered plan must be reported as a <strong>negative amount</strong> in this box.</p> 
 
  <h4>Specific situation </h4>
@@ -706,7 +706,7 @@
   </li>
 
 <li class="code-num">
- <details>  <summary>Code 040 – RESP accumulated income payments <span class="label label-success">Rewrite done</span></summary> 
+ <details>  <summary>Code 040 – RESP accumulated income payments </summary> 
   <p id="cd040">Report accumulated income payments you made as the promoter of a registered education savings plan (<abbr title="Registered education savings plan">RESP</abbr>) to a subscriber of the plan using code 040.</p> 
    <h4>Specific situation </h4>
 <dl class="dl-horizontal">
@@ -718,7 +718,7 @@
  </details> 
  </li>
 <li class="code-num">
-<details >  <summary>Code 042 – RESP educational assistance payments <span class="label label-warning">Jeremiah</span></summary> 
+<details >  <summary>Code 042 – RESP educational assistance payments </summary> 
   <p id="cd042">Report educational assistance payments (amounts other than a refund of contributions) you made as the promoter of a registered education savings plan (<abbr title="Registered education savings plan">RESP</abbr>) to a subscriber of the plan to help finance the cost of post-secondary education using code 042.</p>
  
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/resp.html"> Payments from a registered education savings plan (RESP)</a></p>         
@@ -726,25 +726,25 @@
  </details> 
 </li>
 <li class="code-num">
- <details >  <summary>Code 046 – Charitable donations  <span class="label label-warning">Jeremiah</span></summary> 
-  <p id="cd046">Report the payment you made as the qualified donee for charitable donations to a registered charity in Canada using code 046 </p>
+ <details >  <summary>Code 046 – Charitable donations  </summary> 
+  <p id="cd046">Report the amount you deducted from the recipient’s earnings for donations to a registered charity in Canada using code 046. </p>
 <p>Learn more: <a href="https://apps.cra-arc.gc.ca/ebci/hacc/srch/pub/dsplyBscSrch?request_locale=en">List of Charities</a></p> 
  </details> 
 </li>
 <li class="code-num">
- <details >  <summary>Code 102 – Lump-sum payments – non-resident services transferred under paragraph 60(j) <span class="label label-success">Rewrite done</span></summary> 
+ <details >  <summary>Code 102 – Lump-sum payments – non-resident services transferred under paragraph 60(j) </summary> 
   <p id="cd102">Report lump-sum payments you made for non-resident services transferred to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Simplified pension plan">SPP</abbr>, <abbr title="Pooled registered pension plan">PRPP</abbr> or <abbr title="Registered retirement savings plan">RRSP</abbr> and which were eligible to be deducted under paragraph 60(j) using code 102  <strong>and</strong> <a href="#bx018">box 018</a>.</p>
  </details> 
 </li>
 
 <li class="code-num">
- <details >  <summary>Code 104 – Research grants <span class="label label-success">Rewrite done</span></summary> 
+ <details >  <summary>Code 104 – Research grants </summary> 
   <p id="cd104">Report the full amount of the research grants you paid to the recipient using code 104.</p> 
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/education.html">Educational assistance - Research grants</a></p> 
 </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 105 – Scholarships, fellowships, bursaries, and artists' project grants  <span class="label label-warning">Jeremiah</span></summary> 
+ <details>  <summary>Code 105 – Scholarships, fellowships, bursaries, and artists' project grants </summary> 
   <p id="cd105">Report the full amount of the scholarships, fellowships, bursaries, and artists' project grants you paid to the recipient using code 105.</p> 
 
  <h4>Specific situations </h4>
@@ -761,8 +761,8 @@
  </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 106 – Death benefits <span class="label label-warning">Jeremiah</span></summary> 
-  <p id="cd106">Report the total amount of the death benefit you paid for the death of an employee to recognize the employee's service in an office or employment to a recipient, including the recipient's spouse, common-law partner, heir or estate using code 106.</p> 
+ <details>  <summary>Code 106 – Death benefits </summary> 
+  <p id="cd106">Report the gross amount (including the non-taxable portion) of the death benefit you paid on or after the death of an employee to recognize the employee's service in an office or employment to a recipient, including the recipient's surviving spouse, common-law partner, heir or estate using code 106.</p> 
 
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/death-benefit.html">Payments related to death benefits</a></p> 
  </details> 
